fdo#53968 etc.: Fix more "doesn't start after upgrade" problems

* fdo#53968 revealed that multiple soffice.bin instances can run removeTree in
  parallel.  Therefore, demoted failures from exceptions to SAL_WARNs.  (And
  keeping fingers crossed.)

* a8cdce148c76c93c5d41820610d6e6ac175e03a7 "fdo#53655: Ignore failure to remove
  directories (as happens on Windows XP)" was due to a forgotten
  osl::Directory::close before calling osl::Directory::remove after all.

* UserInstallations have been seen in the wild where no extensions were
  installed per-user (any longer), but user/uno_packages/cache/registry/
  com.sun.star.comp.deployment.component.PackageRegistryBackend/*.rdb files
  contained data nevertheless.  To reliably clean out any old junk,
  refreshBundledExtensionsDir has been extended to cleanExtensionsCache which in
  tandem with an extended Desktop::SynchronizeExtensionRepositories now cleanly
  re-installs all bundled, shared, and per-user extensions after a LO upgrade.

Change-Id: Ic6b5b6c1945d76eb3a65b6cd4512a657b7a835a0