desktop/source/deployment/manager/dp_extensionmanager.hxx
@@ -182,7 +182,7 @@ public:
             css::uno::RuntimeException);
 
     virtual void SAL_CALL reinstallDeployedExtensions(
-        ::rtl::OUString const & repository,
+        sal_Bool force, ::rtl::OUString const & repository,
         css::uno::Reference< css::task::XAbortChannel> const & xAbortChannel,
         css::uno::Reference< css::ucb::XCommandEnvironment> const & xCmdEnv )
         throw (
